# pai

./: .gitignore  Cargo.toml
crates/agent/: Cargo.toml
crates/agent/src/: agent.rs
crates/coding_agent/: Cargo.toml
crates/llm/: Cargo.toml
crates/openai/: Cargo.toml
crates/openai/src/api/: mod.rs
crates/openai/src/api/responses/: mod.rs
crates/pai_openai/: Cargo.toml
crates/pai_openai/examples/: files.rs  request_http.rs  responses.rs  responses_stream.rs
crates/pai_openai/src/: files.rs  pai_openai.rs  responses.rs
crates/pai_openai/src/responses/: mod.rs
src/: lib.rs
