[package]
name = "pai"
version = "0.1.0"
edition = { workspace = true }
description = "A library for LLM"

[workspace]
resolver = "3"
members = [
    "crates/*",
]

[workspace.lints.rust]
unsafe_code = "forbid"
dead_code = "allow"

[workspace.lints.clippy]
unwrap_used = "warn"

[workspace.package]
edition = "2024"

[dependencies]
pai_openai = { path = "crates/pai_openai", version = "0.1.0", default-features = false }