[package]
name = "pai_openai"
version = "0.1.0"
edition = { workspace = true }

[lints]
workspace = true

[lib]
path = "src/pai_openai.rs"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1"
serde = { version = "1.0", features = ["derive"] }